# ClauseWeaver

./: .gitignore  README.md  run_demo.sh  구조화 근거.md
backend/: app.py  models.py  pyproject.toml  services.py  storage.py
backend/tests/: test_mother.py
docs/: mother_edit_design.md  windows-quickstart.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: TreeView.tsx
frontend/src/hooks/: useTree.ts
scripts/windows/: Launch-ClauseWeaver.ps1  Setup-ClauseWeaver.ps1  start_clauseweaver.cmd
