[project]
name = "mother-edit-backend"
version = "0.1.0"
description = "FastAPI backend for mother clause reparenting demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "text-fabric>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
package-dir = { "backend" = "." }
